package edu.masanz.da.pk3.sprite.enemies;


// TODO: Que pueda soportar multiples disparos (y disparar?)

public class StrongBear extends Bear {
    public StrongBear() {
        super();
    }
}
