package edu.masanz.da.pk3.sprite.interfaces;

public interface IHaveShield {

    boolean impact();

}
